--- a/index.html
+++ b/index.html
@@ -1,39 +1,18 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lista Gier Coop</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/871/871363.png" type="image/png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Strona główna</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="page-title">🎮 Platynki Co-op 🏆</h1>
-    <form id="gameForm">
-      <input type="text" id="gameName" placeholder="🔢 Nazwa gry" required />
-      <input type="url" id="guideLink" placeholder="🔗 Link do poradnika" required />
-      <input type="text" id="comment" placeholder="💬 Komentarz" />
-      <button type="submit" class="add-btn">➕ Dodaj grę</button>
-    </form>
-    <button id="sortBtn" class="sort-btn">🌐 Sortuj alfabetycznie</button>
-
-    <table>
-      <thead>
-        <tr>
-          <th>🔖 Nazwa</th>
-          <th>🔗 Poradnik</th>
-          <th>💬 Komentarz</th>
-          <th>❌ Usuń</th>
-        </tr>
-      </thead>
-      <tbody id="gamesList"></tbody>
-    </table>
+    <h1 class="page-title">🎮 Coop czy solo? </h1>
+    <div style="display: flex; flex-direction: column; align-items: center; gap: 1rem; margin-top: 2rem;">
+      <a href="coop.html" class="sort-btn">Coop</a>
+      <a href="solo.html" class="sort-btn">Solo</a>
+    </div>
   </div>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
